# KernelImageProcessor

./: CMakeLists.txt  Channel.cpp  Channel.h  Image.cpp  Image.h  ImageEditor.cpp  ImageEditor.h  Kernel.cpp  Kernel.h  KernelMode.h  PNMFileHandler.cpp  PNMFileHandler.h  PixelImage.cpp  PixelImage.h  README.md  main.cpp
test/: CMakeLists.txt  ImageEditorFixture.cpp  KernelFixture.cpp  KernelTest.cpp  PNMFileHandlerFixture.cpp  PNMImageHandlerFixture.cpp  README.md
test/data/: P1.pbm  P2_16.pgm  P2_8.pgm  P3_8.ppm  P4.pbm  P5_16.pgm  P5_8.pgm  P6_16.ppm  P6_8.ppm
